update files to sass extensions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/4cad4cc884.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" media="screen and (min-width:280px)" href="./css/samll.css">
+<link rel="stylesheet" media="screen and (min-width:280px)" href="./css/small.css">
 <link rel="stylesheet" media="screen and (min-width:768px)" href="./css/medium.css">
 <link rel="stylesheet" media="screen and (min-width:992px)" href="./css/large.css">
 
