--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
     <nav class="nav-wrapper">
         <div class="nav-mobile">
-            <button><i class="fas fa-bars"></i></button>
+            <button><img class="nav-logo"src="./img/nav-logo.png" alt="Logo nawigacji mobilnej">
+            </button>
         </div>
         <div class="nav-desktop">
             <ul>
